APIs/microsoft.com/cognitiveservices-Training/1.2/javascript-client/docs/Project.md
# TrainingApi.Project

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**created** | **Date** | Gets the date this project was created | [optional] [readonly] 
**currentIterationId** | **String** | Gets the current iteration id | [optional] [readonly] 
**description** | **String** | Gets or sets the description of the project | [optional] 
**id** | **String** | Gets the project id | [optional] [readonly] 
**lastModified** | **Date** | Gets the date this project was last modified | [optional] [readonly] 
**name** | **String** | Gets or sets the name of the project | [optional] 
**settings** | [**ProjectSettings**](ProjectSettings.md) |  | [optional] 
**thumbnailUri** | **String** | Gets the thumbnail url representing the image | [optional] [readonly] 


